force-app/main/default/objects/MBMS_Movie__c/MBMS_Movie__c.object-meta.xml
<CustomObject>
    <description>This is an object for storing information about the Movie.</description>
    <label>Movie</label>
    <nameField>
        <label>Movie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>