force-app/main/default/objects/MBMS_Movie__c/fields/MBMS_Description__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Description__c</fullName>
    <description>A field that stores a description of the Movie.</description>
    <inlineHelpText>Description of the movie.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>