force-app/main/default/objects/MBMS_Movie__c/fields/MBMS_Director__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field that stores a lookup to the Artist object.</description>
    <inlineHelpText>Movie director.</inlineHelpText>
    <label>Director</label>
    <referenceTo>MBMS_Artist__c</referenceTo>
    <relationshipLabel>Movies</relationshipLabel>
    <relationshipName>Movies_Director</relationshipName>
    <type>Lookup</type>
</CustomField>