force-app/main/default/objects/MBMS_Movie__c/fields/MBMS_Main_Filming_Location__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Main_Filming_Location__c</fullName>
    <description>A field that stores a main filming location of the Movie.</description>
    <inlineHelpText>Main filming location of the movie.</inlineHelpText>
    <label>Main Filming Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>