force-app/main/default/objects/MBMS_Movie__c/fields/MBMS_Producer__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field that stores a lookup to the Artist object.</description>
    <inlineHelpText>Movie producer.</inlineHelpText>
    <label>Producer</label>
    <referenceTo>MBMS_Artist__c</referenceTo>
    <relationshipLabel>Movies (Producer)</relationshipLabel>
    <relationshipName>Movies</relationshipName>
    <type>Lookup</type>
</CustomField>