force-app/main/default/objects/MBMS_Movie__c/fields/MBMS_Writer__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field that stores a lookup to the Artist object.</description>
    <inlineHelpText>Movie writer.</inlineHelpText>
    <label>Writer</label>
    <referenceTo>MBMS_Artist__c</referenceTo>
    <relationshipLabel>Movies (Writer)</relationshipLabel>
    <relationshipName>Movies_Writer</relationshipName>
    <type>Lookup</type>
</CustomField>