force-app/main/default/objects/MBMS_Movie__c/listViews/All_With_Details.listView-meta.xml
<ListView>
    <fullName>All_With_Details</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>MBMS_Title__c</columns>
    <columns>MBMS_Producer__c</columns>
    <columns>MBMS_Writer__c</columns>
    <columns>MBMS_Director__c</columns>
    <columns>MBMS_Status__c</columns>
    <columns>MBMS_Status_Comment__c</columns>
    <filterScope>Mine</filterScope>
    <label>All With Details</label>
</ListView>